--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -11,5 +11,6 @@
   </head>
   <body>
     <div class="rain">rainnnnnnnnnnnnnnnnnnnnnnnnn</div>
+    <div id="div">我是一个div</div>
   </body>
 </html>
